maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:28: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var g:String 
      ^Escaper:28: error: local variables must be initialized
  var g:String 
      ^Escaper:31: error: type mismatch;
 found   : plm.universe.Direction
 required: String
    g=Direction.NORD
                ^Escaper:34: error: type mismatch;
 found   : plm.universe.Direction
 required: String
    g=Direction.EST
                ^